# import("//build/config/jumbo.gni")
import("//build/config/ui.gni")
import("//testing/test.gni")
import("//tools/grit/grit_rule.gni")


executable("gndev") {
  testonly = true
  sources = [
    "gndev.cc",
    "gn_main_proc.cc",
  ]

  deps = [
    "//base:i18n",
    "//base:base_static",
    "//base/third_party/dynamic_annotations",
    "//cc/paint",
    "//mojo/public/cpp/bindings",
    "//skia",
    "//third_party/icu",
    "//ui/accessibility",
    "//ui/base/clipboard",
    "//ui/display",
    "//ui/latency",
    "//ui/native_theme",
    "//ui/native_theme:native_theme_browser",
    "//ui/resources",
    "//ui/strings",
    "//ui/views",
    "//ui/views/resources",
    "//ui/compositor:test_support",
    "//ui/views:test_support",
    "//url",
  ]
  deps += [
    # ":gndev_resources_grd",
    # ":gndev_resources_pak",
    "//base",
    "//cc/paint",
    "//skia",
    "//third_party/icu",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/native_theme",
    "//ui/resources",
    "//ui/resources:ui_test_pak",
    "//ui/strings:ui_strings",
    "//ui/views",
  ]  
  deps += [
    "//base",
    "//cc/paint",
    "//components/viz/host",
    "//components/viz/service",
    "//mojo/core/embedder",
    "//skia",
    "//ui/base",
    "//ui/compositor",
    "//ui/gfx",
    "//ui/views",
  ]  
  deps += [
    "//base",
#    "//base/test:test_support",
    "//build/win:default_exe_manifest",
    "//ui/resources:ui_test_pak",
  ]
  
  if (is_win) {
    deps += [ "//third_party/wtl" ]
  }
    
  if (use_aura) {
    deps += [ "//ui/aura" ]
  }
}

# grit("gndev_resources_grd") {
#   testonly = true
#   source = "gndev_resources.grd"
#   outputs = [
#     "grit/gndev_resources.h",
#     "gndev_resources.pak",
#   ]
# }
# copy("gndev_resources_pak") {
#   testonly = true
#   sources = [ "$target_gen_dir/gndev_resources.pak" ]
#   outputs = [ "$root_out_dir/gndev_resources.pak" ]
#   public_deps = [ ":gndev_resources_grd" ]
# }
